## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	$(WX_CXXFLAGS) \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" $(PACKAGE_CFLAGS)

AM_CFLAGS =\
	 -Wall \
	 -g \
	 $(WX_CPPFLAGS)

bin_PROGRAMS = springlobby 

springlobby_SOURCES = \
	base64.cpp     \
	md5.c     \
	socket.cpp     \
	mainwindow.cpp     \
	mainwindow.h     \
	serverevents.cpp     \
	base64.h     \
	md5.h     \
	serverevents.h     \
	socket.h     \
	chatpanel.cpp     \
	chatpanel.h     \
	connectwindow.cpp     \
	connectwindow.h     \
	server.cpp     \
	server.h     \
	tasserver.cpp     \
	tasserver.h     \
	mainchattab.cpp     \
	mainchattab.h     \
	settings.h     \
	springlobbyapp.cpp     \
	springlobbyapp.h     \
	user.cpp     \
	user.h     \
	userlist.h     \
	channel.cpp     \
	channel.h     \
	channellist.h     \
	ui.cpp     \
	ui.h     \
	utils.h     \
	nicklistctrl.cpp     \
	nicklistctrl.h     \
	settings.cpp     \
	flagimages.h     \
	flagimages.cpp     \
	mainjoinbattletab.cpp     \
	mainjoinbattletab.h     \
	battlelistctrl.cpp     \
	battlelistctrl.h     \
	battle.cpp     \
	battle.h     \
	battlelist.h     \
	iconimagelist.cpp     \
	iconimagelist.h 

springlobby_LDFLAGS = 

springlobby_LDADD = \
	$(PACKAGE_LIBS) \
	$(WX_LIBS)

